Fix margins not collapsing between containers

--- a/answers/session-2/source/components/Container/styles.scss
+++ b/answers/session-2/source/components/Container/styles.scss
@@ -3,5 +3,4 @@
     max-width: 900px;
     margin: 0 auto;
     padding: 0 15px;
-    overflow: hidden;    
 }
